style: fix player name overflowing

--- a/app/views/components/player-name/player-name.styl
+++ b/app/views/components/player-name/player-name.styl
@@ -2,6 +2,7 @@
   display flex
   align-items center
   flex 1
+  min-width 0
 
   .player__name-headshot
     margin-right 8px
