--- a/app/views/components/trade-player/trade-player.styl
+++ b/app/views/components/trade-player/trade-player.styl
@@ -6,6 +6,7 @@
 
 .trade__player-name
   flex 1
+  min-width 0
 
 .trade__player-metric
   flex 0 0 50px
